--- a/Home/Tpl/Public/css/ui.css
+++ b/Home/Tpl/Public/css/ui.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    font-family: Arial,'Hiragino Sans GB',Microsoft YaHei,sans-serif;
+    font-family: 'Microsoft YaHei';
     font-size: 14px;
     line-height: 1.42857143;
     color: #333;
